--- a/imaginación mecanizada - 1.ipynb
+++ b/imaginación mecanizada - 1.ipynb
@@ -6,8 +6,9 @@
         "id": "3e2O4uXnhTya"
       },
       "source": [
-        "# El arte de la imaginación mecanizada\n",
-        "## Prácticas y pensamiento artísticos en torno al giro tecnológico y a Inteligencias Artificiales, Bilbo, 11 de julio de 2023\n",
+        "# El arte de la imaginación mecanizada - Ejercicio 1\n",
+        "\n",
+        "#### Prácticas y pensamiento artísticos en torno al giro tecnológico y a Inteligencias Artificiales, Bilbo, 11 de julio de 2023\n",
         "\n",
         "Basado muy fuertemente en [Grokking Stable Diffusion](https://colab.research.google.com/drive/1dlgggNa5Mz8sEAGU0wFCHhGLFooW_pf1?usp=sharing) de [Jonathan Whitaker](https://github.com/johnowhitaker) y en [Stable Diffusion with 🧨 diffusers](https://colab.research.google.com/github/huggingface/notebooks/blob/main/diffusers/stable_diffusion.ipynb) de [🤗 Hugging Face](https://github.com/huggingface/diffusers)\n",
         "\n"
@@ -155,16 +156,14 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown #1. Hiperscala\n",
-        "#@markdown Un único prompt que multiplicamos para hacerlo 'hiper'.\n",
+        "#@markdown #Exploración no guiada\n",
         "\n",
         "num_images = 1\n",
         "\n",
-        "prompt = \"dog natgeo\"  # @param {type:\"string\"}\n",
-        "semilla = 2100112712  # @param {type:\"number\"}\n",
+        "prompt = \"potruflo, award winning photograph\"  # @param {type:\"string\"}\n",
+        "semilla = 498748461  # @param {type:\"number\"}\n",
         "guia = 7.5  # -@param {type:\"slider\", min:4.5, max:21, step:1.5}\n",
-        "hiperescala = 1  # @param {type:\"slider\", min:-2, max:2, step:0.05}\n",
-        "pasos = 60  # @param {type:\"slider\", min:25, max:150, step:5}\n",
+        "pasos = 35  # @param {type:\"slider\", min:25, max:100, step:5}\n",
         "\n",
         "\n",
         "prompts = [\"\"] * num_images  # Unconditional\n",
@@ -180,14 +179,10 @@
         "\n",
         "token_list = inputs.input_ids[1].tolist()\n",
         "\n",
-        "# Reescalamos los embeddings del prompt\n",
-        "text_embeddings[num_images:, 1:token_list.index(\n",
-        "    token_EOS_value)] *= hiperescala\n",
-        "\n",
         "\n",
         "semilla, generator = get_seed_gen(semilla)\n",
         "images = render(pasos, guia, generator, text_embeddings, num_images)\n",
-        "filename = f\"1_{prompt}_{semilla}_{hiperescala:0.02f}_{pasos}.jpg\"\n",
+        "filename = f\"1_{prompt}_{semilla}_{pasos}.jpg\"\n",
         "\n",
         "print(f\"Semilla: {semilla}\")\n",
         "print(f\"Fichero: {filename}\\n\")\n",
@@ -196,204 +191,6 @@
         "grid.save(filename, quality=100, subsampling=0)\n",
         "files.download(filename)\n",
         "grid\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "fB3o7-WZGo5l"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown #2. Híbridos\n",
-        "#@markdown Combinación de dos prompts.\n",
-        "\n",
-        "num_images = 1\n",
-        "\n",
-        "pasos = 50\n",
-        "guia = 7.5\n",
-        "\n",
-        "prompt1 = \"elephant natgeo\"  # @param {type:\"string\"}\n",
-        "prompt2 = \"macaw natgeo\"  # @param {type:\"string\"}\n",
-        "semilla = 3032598914  # @param {type:\"number\"}\n",
-        "mezcla = 52  # @param {type:\"slider\", min:0, max:100, step:1}\n",
-        "mezcla /= 100\n",
-        "\n",
-        "\n",
-        "inputs = tokenizer([\"\", prompt1, prompt2], padding=\"max_length\",\n",
-        "                   max_length=tokenizer.model_max_length, truncation=True, return_tensors=\"pt\")  # [3,77]\n",
-        "\n",
-        "with torch.no_grad():\n",
-        "  embeddings = text_encoder(inputs.input_ids.to(torch_device))[0]  # [3,77,768]\n",
-        "\n",
-        "text_embeddings = torch.stack(\n",
-        "    [embeddings[0], embeddings[1]*(1-mezcla) + embeddings[2]*mezcla])  # [2,77,768]\n",
-        "\n",
-        "\n",
-        "semilla, generator = get_seed_gen(semilla)\n",
-        "images = render(pasos, guia, generator, text_embeddings, num_images)\n",
-        "filename = f\"21_{prompt1}_{prompt2}_{semilla}_{mezcla:0.02f}.jpg\"\n",
-        "\n",
-        "print(f\"Semilla: {semilla}\")\n",
-        "print(f\"Fichero: {filename}\\n\")\n",
-        "\n",
-        "grid = image_grid(images, cols=3)\n",
-        "grid.save(filename, quality=100, subsampling=0)\n",
-        "files.download(filename)\n",
-        "grid"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "ctlMLKRQMMbS"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown #¡Ayuda! - Cuentatokens\n",
-        "prompt1 = \"teenager face natgeo golden hour\"  # @param {type:\"string\"}\n",
-        "prompt2 = \"greyhound, natgeo\"  # @param {type:\"string\"}\n",
-        "\n",
-        "\n",
-        "def tokens_to_list(tokens):\n",
-        "  tokens = list(filter(lambda id: id != 49406 and id != 49407, tokens))\n",
-        "  token_list = [tokenizer.decoder.get(t) for t in tokens]\n",
-        "  return token_list\n",
-        "\n",
-        "\n",
-        "tokens = tokenizer([prompt1, prompt2], return_tensors=\"np\",\n",
-        "                   padding=True).input_ids\n",
-        "tokens = [tokens_to_list(tokens[0]), tokens_to_list(tokens[1])]\n",
-        "print(f\"{tokens[0]}: {len(tokens[0])}\")\n",
-        "print(f\"{tokens[1]}: {len(tokens[1])}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "5Nc34EEYkC7y"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown #1. Hiperescala - AVANZADO\n",
-        "#@markdown Un único prompt que multiplicamos para hacerlo hiper. Podemos elegir el rango a multiplicar y añadir ruido.\n",
-        "\n",
-        "num_images = 1\n",
-        "\n",
-        "prompt = \"dog natgeo\"  # @param {type:\"string\"}\n",
-        "semilla = 2100112712  # @param {type:\"number\"}\n",
-        "guia = 7.5  #-@param {type:\"slider\", min:4.5, max:21, step:1.5}\n",
-        "hiperescala = 0.05  # @param {type:\"slider\", min:-1.95, max:2, step:0.05}\n",
-        "pasos = 85  # @param {type:\"slider\", min:25, max:250, step:5}\n",
-        "\n",
-        "desde = 3  # @param {type:\"slider\", min:0, max:76, step:1}\n",
-        "hasta = 76  # @param {type:\"slider\", min:0, max:76, step:1}\n",
-        "\n",
-        "ruido = 0.5 # @param {type:\"slider\", min:0, max:2, step:0.1}\n",
-        "\n",
-        "\n",
-        "prompts = [\"\"] * num_images  # Unconditional\n",
-        "prompts.extend([prompt] * num_images)  # Prompts\n",
-        "\n",
-        "\n",
-        "inputs = tokenizer(prompts, padding=\"max_length\", max_length=tokenizer.model_max_length,\n",
-        "                   truncation=True, return_tensors=\"pt\")  # [num_images * 2, 77]\n",
-        "\n",
-        "with torch.no_grad():\n",
-        "  text_embeddings = text_encoder(inputs.input_ids.to(torch_device))[\n",
-        "      0]  # [num_images * 2, 77, 768]\n",
-        "\n",
-        "# Reescalamos los embeddings del prompt\n",
-        "text_embeddings[num_images:, desde:(hasta+1)] *= hiperescala\n",
-        "\n",
-        "# Y añadimos el ruido\n",
-        "semilla, generator = get_seed_gen(semilla)\n",
-        "text_embeddings[num_images:] += (torch.rand(text_embeddings[num_images:].size(),\n",
-        "                                            generator=generator,\n",
-        "                                            device=torch_device,\n",
-        "                                            )-0.5)*ruido\n",
-        "\n",
-        "#Esto es una chapu, pero así nos resetea el generador y podemos replicar los\n",
-        "#resultados de la versión no avanzada\n",
-        "semilla, generator = get_seed_gen(semilla)\n",
-        "images = render(pasos, guia, generator, text_embeddings, num_images)\n",
-        "filename = f\"1_{prompt}_{semilla}_{hiperescala:0.02f}_{pasos}_{desde}_{hasta}_{ruido:0.01f}.jpg\"\n",
-        "\n",
-        "print(f\"Semilla: {semilla}\")\n",
-        "print(f\"Fichero: {filename}\\n\")\n",
-        "\n",
-        "grid = image_grid(images, cols=3)\n",
-        "grid.save(filename, quality=100, subsampling=0)\n",
-        "files.download(filename)\n",
-        "grid\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "OVLAPjOjpEeN"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown #2. Híbridos - AVANZADO\n",
-        "#@markdown Combinación de varios prompts con pesos individuales. Ajuste de pasos y guía.\n",
-        "\n",
-        "num_images = 1\n",
-        "\n",
-        "prompt_body = \"a portrait of a @, natgeo\" # @param {type:\"string\"}\n",
-        "prompt_subjects = \"seal:1 parrot:3 skull:4\"  # @param {type:\"string\"}\n",
-        "prompt_remove = \"hair\" # @param {type:\"string\"}\n",
-        "semilla = 1823707604  # @param {type:\"number\"}\n",
-        "pasos = 75  # @param {type:\"slider\", min:50, max:250, step:25}\n",
-        "guia = 7.5  # @param {type:\"slider\", min:4.5, max:21, step:1.5}\n",
-        "\n",
-        "regex = re.compile(r'[a-záéíóúñ][a-záéíóúñ ]+:-?\\d+')\n",
-        "\n",
-        "weights = []\n",
-        "prompts = [prompt_remove]\n",
-        "weight_sum = 0\n",
-        "for subject in regex.findall(prompt_subjects):\n",
-        "  values = subject.split(\":\")\n",
-        "  values[1] = int(values[1])\n",
-        "  weights.append(values[1])\n",
-        "  prompts.append(prompt_body.replace('@', values[0].strip()))\n",
-        "  weight_sum += abs(values[1])\n",
-        "#print(weight_sum, weights, prompts)\n",
-        "\n",
-        "inputs = tokenizer(prompts, padding=\"max_length\", max_length=tokenizer.model_max_length,\n",
-        "                   truncation=True, return_tensors=\"pt\")  # [1+len(subject_list),77]\n",
-        "\n",
-        "with torch.no_grad():\n",
-        "  embeddings = text_encoder(inputs.input_ids.to(torch_device))[\n",
-        "      0]  # [1+len(subject_list),77,768]\n",
-        "\n",
-        "for i in range(embeddings.shape[0]-1):\n",
-        "  # print(100*weights[i]/weight_sum)\n",
-        "  embeddings[i+1] *= weights[i]/weight_sum\n",
-        "\n",
-        "text_embeddings = torch.stack(\n",
-        "    [embeddings[0], torch.sum(embeddings[1:], axis=0)])  # [2,77,768]\n",
-        "\n",
-        "\n",
-        "semilla, generator = get_seed_gen(semilla)\n",
-        "images = render(pasos, guia, generator, text_embeddings, num_images)\n",
-        "filename = f\"2_{prompt_body}_{prompt_subjects}_{semilla}_{pasos}_{guia}.jpg\"\n",
-        "\n",
-        "print(f\"Semilla: {semilla}\")\n",
-        "print(filename)\n",
-        "\n",
-        "grid = image_grid(images, cols=3)\n",
-        "grid.save(filename, quality=100, subsampling=0)\n",
-        "files.download(filename)\n",
-        "grid"
       ]
     }
   ],
