Update imaginación mecanizada - 2.ipynb

--- a/imaginación mecanizada - 2.ipynb
+++ b/imaginación mecanizada - 2.ipynb
@@ -6,8 +6,9 @@
         "id": "3e2O4uXnhTya"
       },
       "source": [
-        "# El arte de la imaginación mecanizada\n",
-        "## Prácticas y pensamiento artísticos en torno al giro tecnológico y a Inteligencias Artificiales, Bilbo, 11 de julio de 2023\n",
+        "# El arte de la imaginación mecanizada - Ejercicio 1\n",
+        "\n",
+        "#### Prácticas y pensamiento artísticos en torno al giro tecnológico y a Inteligencias Artificiales, Bilbo, 11 de julio de 2023\n",
         "\n",
         "Basado muy fuertemente en [Grokking Stable Diffusion](https://colab.research.google.com/drive/1dlgggNa5Mz8sEAGU0wFCHhGLFooW_pf1?usp=sharing) de [Jonathan Whitaker](https://github.com/johnowhitaker) y en [Stable Diffusion with 🧨 diffusers](https://colab.research.google.com/github/huggingface/notebooks/blob/main/diffusers/stable_diffusion.ipynb) de [🤗 Hugging Face](https://github.com/huggingface/diffusers)\n",
         "\n"
